<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/InvestedAmountLabel"
        android:text="@string/invested_amount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/InvestedAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/RateProfitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_profit_label"
        android:layout_marginTop="@dimen/investment_profit_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/InvestedAmountLabel" />

    <TextView
        android:id="@+id/RateProfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/investment_profit_margin_top"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InvestedAmount" />

    <TextView
        android:id="@+id/InvestmentProfitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/investment_profit_label"
        android:layout_marginTop="@dimen/investment_profit_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/RateProfitLabel" />

    <TextView
        android:id="@+id/InvestmentProfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/investment_profit_margin_top"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RateProfitLabel" />

    <TextView
        android:id="@+id/IRLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IR_label"
        android:layout_marginTop="@dimen/investment_profit_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/InvestmentProfitLabel" />

    <TextView
        android:id="@+id/IRValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/investment_profit_margin_top"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InvestmentProfit" />

    <TextView
        android:id="@+id/NetAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/net_amount_label"
        android:layout_marginTop="@dimen/investment_profit_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/IRLabel" />

    <TextView
        android:id="@+id/NetAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/investment_profit_margin_top"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IRValue" />

</android.support.constraint.ConstraintLayout>